Require Jenkins 2.479.3 and Jakarta EE 9