@@ -1,16 +1,16 @@
 // Copyright (c) 2024 The MathWorks, Inc.
 // All Rights Reserved.
-// 
+//
 // Permission is hereby granted, free of charge, to any person obtaining a copy
 // of this software and associated documentation files (the "Software"), to deal
 // in the Software without restriction, including without limitation the rights
 // to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 // copies of the Software, and to permit persons to whom the Software is
 // furnished to do so, subject to the following conditions:
-// 
+//
 // The above copyright notice and this permission notice shall be included in
 // all copies or substantial portions of the Software.
-// 
+//
 // THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 // IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 // FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -38,19 +38,19 @@ public class PolyspaceUtils {
       Path filename = path.getFileName();
       if (filename == null)
       {
-        throw new RuntimeException("Cannot work on a path with 0 elements: '" + path.toString() + "'");
+        throw new RuntimeException("Cannot work on a path with 0 elements: '" + path + "'");
       }
       Path tempFile = Paths.get(tempDir.toString(), filename.toString());
       Files.copy(path, tempFile);
       return tempFile;
     } else {
-      throw new RuntimeException("Should not be a directory: '" + path.toString() + "'");
+      throw new RuntimeException("Should not be a directory: '" + path + "'");
     }
   }
 
   public static String getFileContent(Path path) throws IOException
   {
-    return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+    return Files.readString(path);
   }
 
   public static void writeContent(Path path, ArrayList<String> content) throws IOException
